--- a/css/landing.css
+++ b/css/landing.css
@@ -182,6 +182,30 @@ li{
       text-align: center;
 }
 
+.logoLogin{
+      font-size: 20px;
+      color: var(--white);
+      padding: 8px;
+      background-color: var(--red);
+      border-radius: 100%;
+      margin: 4px;
+}
+
+.profil{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+}
+
+.profil:hover{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+      text-decoration: none;
+}
+
 
 
 /* ------------- Footer ------------- */
