--- a/css/produk.css
+++ b/css/produk.css
@@ -244,6 +244,29 @@ li{
 }
 
 
+.logoLogin{
+      font-size: 20px;
+      color: var(--white);
+      padding: 8px;
+      background-color: var(--red);
+      border-radius: 100%;
+      margin: 4px;
+}
+
+.profil{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+}
+
+.profil:hover{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+      text-decoration: none;
+}
 
 
 
