--- a/css/produk.css
+++ b/css/produk.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&family=Roboto+Flex:opsz@8..144&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
       --semiBlack: #222222;
@@ -40,16 +40,19 @@ body {
 /* ------------- Navbar ------------- */
 
 .navbar {
+      font-family: 'Poppins', sans-serif;
       font-size: 15px;
       background-color: var(--semiBlack);
 }
 
 .nav-item {
+      font-family: 'Poppins', sans-serif;
       margin: 0px 16px;
       color: var(--white);
 }
 
 li{
+      font-family: 'Poppins', sans-serif;
       margin: 0px 16px;
       color: var(--white);
 }
@@ -66,6 +69,7 @@ li{
 }
 
 .btnn {
+      font-family: 'Poppins', sans-serif;
       font-size: 15px;
       width: 120px;
       height: 56px;
@@ -96,6 +100,7 @@ li{
 }
 
 .btn10 {
+      font-family: 'Poppins', sans-serif;
       font-size: 16px;
       font-weight: 600;
       width: 160px;
@@ -108,7 +113,7 @@ li{
 }
 
 .title0 {
-      font-family: 'Poppins';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 800;
       font-size: 130px;
@@ -118,7 +123,7 @@ li{
 }
 
 .paragraf3{
-      font-family: 'Poppins';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 500;
       font-size: 28px;
@@ -139,7 +144,7 @@ li{
 
 .card-title{
       color: var(--semiBlack);
-      font-family: 'Montserrat';
+      font-family: 'Poppins', sans-serif;
       font-style: bold;
       font-weight: 700;
       font-size: 20px;
@@ -147,7 +152,7 @@ li{
 
 .harga{
       color: var(--red);
-      font-family: 'Montserrat';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 600;
       font-size: 18px;
@@ -160,7 +165,7 @@ li{
 }
 
 .title2 {
-      font-family: 'Poppins';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 800;
       font-size: 40px;
@@ -223,7 +228,7 @@ li{
 
 .card-title{
       color: var(--semiBlack);
-      font-family: 'Montserrat';
+      font-family: 'Poppins', sans-serif;
       font-style: bold;
       font-weight: 700;
       font-size: 20px;
@@ -231,25 +236,50 @@ li{
 
 .harga{
       color: var(--red);
-      font-family: 'Montserrat';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 600;
       font-size: 18px;
 }
 
 .card-body{
+      font-family: 'Poppins', sans-serif;
       margin-top: 16px;
       background-color: var(--softGrey);
       border-radius: 24px;
 }
 
 
+.logoLogin{
+      font-size: 20px;
+      color: var(--white);
+      padding: 8px;
+      background-color: var(--red);
+      border-radius: 100%;
+      margin: 4px;
+}
+
+.profil{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+}
+
+.profil:hover{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+      text-decoration: none;
+}
 
 
 
 /* ------------- Footer ------------- */
 
 footer{
+      font-family: 'Poppins', sans-serif;
       background-color: var(--semiBlack);
       color: var(--white);
 }
@@ -279,12 +309,14 @@ footer{
 }
 
 .headingFoot{
+      font-family: 'Poppins', sans-serif;
       font-size: 20px;
       margin-bottom: 20px;
       font-weight: 600;
 }
 
 .contentFoot{
+      font-family: 'Poppins', sans-serif;
       font-size: 16px;
       font-weight: 200;
       color: var(--white);
