--- a/css/logReg.css
+++ b/css/logReg.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;200;300;400;500;600;700&family=Roboto+Flex:opsz@8..144&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
       --semiBlack: #222222;
@@ -40,16 +40,19 @@ body {
 /* ------------- Navbar ------------- */
 
 .navbar {
+      font-family: 'Poppins', sans-serif;
       font-size: 15px;
       background-color: var(--semiBlack);
 }
 
 .nav-item {
+      font-family: 'Poppins', sans-serif;
       margin: 0px 16px;
       color: var(--white);
 }
 
 li{
+      font-family: 'Poppins', sans-serif;
       margin: 0px 16px;
       color: var(--white);
 }
@@ -66,6 +69,7 @@ li{
 }
 
 .btnn {
+      font-family: 'Poppins', sans-serif;
       font-size: 15px;
       width: 120px;
       height: 56px;
@@ -98,6 +102,7 @@ li{
 }
 
 .btn10 {
+      font-family: 'Poppins', sans-serif;
       font-size: 14px;
       font-weight: 600;
       width: 100%;
@@ -111,6 +116,7 @@ li{
 }
 
 .btn100 {
+      font-family: 'Poppins', sans-serif;
       font-size: 40px;
       width: 100%;
       padding: 16px;
@@ -126,7 +132,7 @@ li{
 
 
 .title0 {
-      font-family: 'Poppins';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 800;
       font-size: 130px;
@@ -136,7 +142,7 @@ li{
 }
 
 .paragraf4{
-      font-family: 'Poppins';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 500;
       font-size: 14px;
@@ -149,7 +155,7 @@ li{
 
 
 .title2 {
-      font-family: 'Poppins';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 800;
       font-size: 40px;
@@ -159,7 +165,7 @@ li{
 }
 
 .title3 {
-      font-family: 'Poppins';
+      font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 800;
       font-size: 24px;
@@ -169,8 +175,34 @@ li{
 }
 
 .form-control{
+      font-family: 'Poppins', sans-serif;
       margin-bottom: 16px;
       font-size: 12px;
       color: var(--font2);
       height: 40px;
+}
+
+
+.logoLogin{
+      font-size: 20px;
+      color: var(--white);
+      padding: 8px;
+      background-color: var(--red);
+      border-radius: 100%;
+      margin: 4px;
+}
+
+.profil{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+}
+
+.profil:hover{
+      font-size: 16px; 
+      color: var(--white);
+      margin: 4px;
+      font-style: normal;
+      text-decoration: none;
 }
