--- a/css/logReg.css
+++ b/css/logReg.css
@@ -103,13 +103,13 @@ li{
 
 .btn10 {
       font-family: 'Poppins', sans-serif;
-      font-size: 14px;
+      font-size: 16px;
       font-weight: 600;
       width: 100%;
-      height: 48px;
+      height: 56px;
       border-radius: 100px;
       background-color: var(--green);
-      color: var(--semiBlack);
+      color: var(--white);
       border: none;
       margin-bottom: 16px;
 
@@ -151,6 +151,15 @@ li{
       color: var(--semiBlack);
 }
 
+.paragraf3{
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 20px;
+
+      color: var(--semiBlack);
+}
 /* ------------- loginRegister ------------- */
 
 
@@ -177,9 +186,10 @@ li{
 .form-control{
       font-family: 'Poppins', sans-serif;
       margin-bottom: 16px;
-      font-size: 12px;
+      font-size: 16px;
       color: var(--font2);
-      height: 40px;
+      height: 56px;
+      border-radius: 8px;
 }
 
 
@@ -206,3 +216,33 @@ li{
       font-style: normal;
       text-decoration: none;
 }
+
+
+/* History */
+.kotakKhus{
+      font-family: 'Poppins', sans-serif;
+      padding: 24px;
+      border-radius: 24px;
+      border: solid 1px var(--font2);
+
+}
+
+.kotakKhus2{
+      font-family: 'Poppins', sans-serif;
+      padding: 24px 24px 12px 24px;
+      border-radius: 12px;
+      border: solid 1px var(--white);
+      background-color: var(--red);
+      color: var(--white);
+
+}
+
+
+.label{
+      background-color: blue;
+      
+      padding: 8px 16px;
+      color: white;
+      border-radius: 100px;
+}
+
