--- a/css/produk.css
+++ b/css/produk.css
@@ -3,8 +3,8 @@
 :root {
       --semiBlack: #222222;
       --darkGrey: #383838;
-      --grey:#E2E2E2;
-      --softGrey:#F5F5F5;
+      --grey: #E2E2E2;
+      --softGrey: #F5F5F5;
       --white: #fff;
       --red: #E6252F;
       --orange: #FF3D00;
@@ -51,7 +51,7 @@ body {
       color: var(--white);
 }
 
-li{
+li {
       font-family: 'Poppins', sans-serif;
       margin: 0px 16px;
       color: var(--white);
@@ -83,19 +83,23 @@ li{
 /* ------------- Navbar ------------- */
 
 
-.linkBut{
+.linkBut {
       margin-right: 16px;
 }
 
-.vidioImage{
+.vidioImage {
       height: 60px;
 }
 
-.section1 .row .gambarLing img{
+.section1 .row .gambarLing img {
       width: 95%;
 }
 
-.konten{
+.section1 .row .gambarLing2 img {
+      width: 95%;
+}
+
+.konten {
       padding: 48px 16px;
 }
 
@@ -112,6 +116,20 @@ li{
 
 }
 
+
+.btn11 {
+      font-family: 'Poppins', sans-serif;
+      font-size: 16px;
+      font-weight: 600;
+      width: 100%;
+      height: 60px;
+      border-radius: 100px;
+      background-color: var(--red);
+      color: var(--white);
+      border: none;
+
+}
+
 .title0 {
       font-family: 'Poppins', sans-serif;
       font-style: normal;
@@ -122,7 +140,18 @@ li{
       color: var(--white);
 }
 
-.paragraf3{
+
+.title1 {
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 60px;
+      line-height: 64px;
+      margin-bottom: 20px;
+      color: var(--font1);
+}
+
+.paragraf3 {
       font-family: 'Poppins', sans-serif;
       font-style: normal;
       font-weight: 500;
@@ -132,17 +161,27 @@ li{
       color: #FFFFFF;
 }
 
+.paragraf4 {
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 32px;
+      margin-bottom: 0px;
+      color: var(--semiBlack);
+}
+
 
 .card {
       border-radius: 24px;
       border: none;
 }
 
-.card-img-top{
+.card-img-top {
       border-radius: 24px;
 }
 
-.card-title{
+.card-title {
       color: var(--semiBlack);
       font-family: 'Poppins', sans-serif;
       font-style: bold;
@@ -150,7 +189,7 @@ li{
       font-size: 20px;
 }
 
-.harga{
+.harga {
       color: var(--red);
       font-family: 'Poppins', sans-serif;
       font-style: normal;
@@ -158,7 +197,7 @@ li{
       font-size: 18px;
 }
 
-.card-body{
+.card-body {
       margin-top: 16px;
       background-color: var(--softGrey);
       border-radius: 24px;
@@ -175,27 +214,51 @@ li{
       text-align: center;
 }
 
+.title3 {
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: 800;
+      font-size: 24px;
+      line-height: 24px;
+      margin-bottom: 24px;
+      color: var(--darkBlue);
+      text-align: center;
+}
 
 
 
-.filter{
+
+.filter {
       background-color: var(--grey);
       border-radius: 24px;
       height: auto;
 }
-.par{
+
+.par {
       font-weight: 900;
+      margin-top: auto;
+      margin-bottom: auto;
 }
-.bag{
+
+.par1 {
+      font-weight: 600;
+      margin-top: auto;
+      margin-bottom: auto;
+      font-size: 20px;
+      margin-bottom: 8px;
+}
+
+
+.bag {
       padding: 16px 24px;
 }
 
 
-.form-check{
+.form-check {
       padding: 6px 24px;
 }
 
-.size{
+.size {
       font-size: 16px;
       text-align: center;
       align-items: center;
@@ -204,12 +267,27 @@ li{
       border-radius: 100%;
 }
 
-.size:hover{
+.size2 {
+      font-size: 16px;
+      text-align: center;
+      align-items: center;
+      background-color: var(--softGrey);
+      padding: 13px 12px;
+      border-radius: 100%;
+      border: solid 1px var(--font2);
+}
+
+.size:hover {
       background-color: var(--darkGrey);
       color: var(--white);
 }
 
-.produk{
+.size2:hover {
+      background-color: var(--darkGrey);
+      color: var(--white);
+}
+
+.produk {
       padding: 0px 40px;
       border-radius: 24px;
       height: 100%;
@@ -222,11 +300,11 @@ li{
       height: 100%;
 }
 
-.card-img-top{
+.card-img-top {
       border-radius: 24px;
 }
 
-.card-title{
+.card-title {
       color: var(--semiBlack);
       font-family: 'Poppins', sans-serif;
       font-style: bold;
@@ -234,7 +312,7 @@ li{
       font-size: 20px;
 }
 
-.harga{
+.harga {
       color: var(--red);
       font-family: 'Poppins', sans-serif;
       font-style: normal;
@@ -242,7 +320,15 @@ li{
       font-size: 18px;
 }
 
-.card-body{
+.harga2 {
+      color: var(--font1);
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 24px;
+}
+
+.card-body {
       font-family: 'Poppins', sans-serif;
       margin-top: 16px;
       background-color: var(--softGrey);
@@ -250,7 +336,7 @@ li{
 }
 
 
-.logoLogin{
+.logoLogin {
       font-size: 20px;
       color: var(--white);
       padding: 8px;
@@ -259,15 +345,24 @@ li{
       margin: 4px;
 }
 
-.profil{
-      font-size: 16px; 
+.logoChat {
+      font-size: 32px;
+      color: var(--white);
+      padding: 12px;
+      background-color: green;
+      border-radius: 100%;
+      margin: 4px;
+}
+
+.profil {
+      font-size: 16px;
       color: var(--white);
       margin: 4px;
       font-style: normal;
 }
 
-.profil:hover{
-      font-size: 16px; 
+.profil:hover {
+      font-size: 16px;
       color: var(--white);
       margin: 4px;
       font-style: normal;
@@ -278,17 +373,17 @@ li{
 
 /* ------------- Footer ------------- */
 
-footer{
+footer {
       font-family: 'Poppins', sans-serif;
       background-color: var(--semiBlack);
       color: var(--white);
 }
 
-.link{
+.link {
       padding-top: 32px;
 }
 
-.sosmed{
+.sosmed {
       background-color: #000;
 }
 
@@ -304,18 +399,18 @@ footer{
       margin-bottom: 16px;
 }
 
-.gambarFoot{
+.gambarFoot {
       margin-bottom: 20px;
 }
 
-.headingFoot{
+.headingFoot {
       font-family: 'Poppins', sans-serif;
       font-size: 20px;
       margin-bottom: 20px;
       font-weight: 600;
 }
 
-.contentFoot{
+.contentFoot {
       font-family: 'Poppins', sans-serif;
       font-size: 16px;
       font-weight: 200;
@@ -324,3 +419,165 @@ footer{
 
 /* ------------- Footer ------------- */
 
+
+
+/* Carosel */
+
+.carousel-item img {
+      width: 100%;
+}
+
+.carousel-control-prev {
+      margin-top: auto;
+      margin-bottom: auto;
+      height: 48px;
+      width: 48px;
+      text-align: center;
+      align-items: center;
+      background-color: #000;
+      border-radius: 100%;
+
+}
+
+.carousel-control-prev-icon {
+      padding: 8px;
+
+}
+
+.carousel-control-next {
+      margin-top: auto;
+      margin-bottom: auto;
+      height: 48px;
+      width: 48px;
+      text-align: center;
+      align-items: center;
+      background-color: #000;
+      border-radius: 100%;
+
+}
+
+.carousel-control-next-icon {
+      padding: 8px;
+
+}
+
+.kotak {
+      border: solid 1px var(--font2);
+      border-radius: 24px;
+      padding: 32px;
+}
+
+.kotak2 {
+      border: solid 1px var(--font2);
+      border-radius: 16px;
+      padding: 16px;
+      margin-top: 16px;
+}
+
+.kotakPay {
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 48px;
+      padding: 48px;
+      color: white;
+      background-color: var(--green);
+      text-align: center;
+      align-items: center;
+      width: 55%;
+}
+
+.kotakchat {
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 48px;
+      padding: 48px;
+      color: white;
+      background-color: var(--semiBlack);
+      width: 75%;
+}
+
+.loc {
+      font-size: 18px;
+      background-color: var(--red);
+      padding: 12px;
+      border-radius: 100%;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-right: 8px;
+      color: var(--white);
+}
+
+.custom-file-label {
+      margin-top: 8px;
+      margin-bottom: 8px;
+}
+
+.namaBank {
+      font-family: 'Poppins', sans-serif;
+      font-size: 18px;
+      margin-top: auto;
+      margin-bottom: auto;
+      margin-left: 8px;
+      color: var(--semiBlack);
+}
+
+.logosuccess {
+      font-size: 120px;
+}
+
+.review {
+      font-size: 24px;
+}
+
+/* Chat */
+
+.container {
+      font-family: 'Poppins', sans-serif;
+      border: 2px solid #dedede;
+      background-color: #fff;
+      border-radius: 5px;
+      padding: 10px;
+      margin: 10px 0;
+      color: var(--semiBlack);
+      padding: 24px;
+}
+
+.darker {
+      font-family: 'Poppins', sans-serif;
+      border: none;
+      background-color: #3221F4;
+      color: #fff;
+}
+
+.container::after {
+      font-family: 'Poppins', sans-serif;
+      content: "";
+      clear: both;
+      display: table;
+}
+
+.container img {
+      float: left;
+      max-width: 60px;
+      width: 100%;
+      margin-right: 20px;
+      border-radius: 50%;
+}
+
+.container img.right {
+      float: right;
+      margin-left: 20px;
+      margin-right: 0;
+}
+
+.time-right {
+      font-family: 'Poppins', sans-serif;
+      float: right;
+      color: var(--semiBlack);
+}
+
+.time-left {
+      font-family: 'Poppins', sans-serif;
+      float: left;
+      color: #fff;
+}
